Add cucumber tests

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ lerna-debug.log*
 # Tests
 /coverage
 /.nyc_output
+/output
 
 # IDEs and editors
 /.idea
@@ -34,5 +35,6 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# Envs
 .env
 .env.*
