--- a/package.json
+++ b/package.json
@@ -14,50 +14,56 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:cucumber": "cucumber-js",
     "test:unit": "jest --selectProjects unit",
     "test:integration": "jest --selectProjects integration",
     "test:e2e": "jest --selectProjects e2e",
+    "test:load": "artillery run __tests__/load/basic-load-test.yml",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "joi": "^17.11.0",
-    "nestjs-real-ip": "^3.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "@nestjs/common": "10.0.0",
+    "@nestjs/config": "3.1.1",
+    "@nestjs/core": "10.0.0",
+    "@nestjs/platform-express": "10.0.0",
+    "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "joi": "17.11.0",
+    "nestjs-real-ip": "3.0.1",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^18.0.0",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "commitizen": "^4.3.0",
-    "commitlint": "^18.0.0",
+    "@commitlint/config-conventional": "18.0.0",
+    "@cucumber/cucumber": "10.0.1",
+    "@nestjs/cli": "10.0.0",
+    "@nestjs/schematics": "10.0.0",
+    "@nestjs/testing": "10.0.0",
+    "@types/express": "4.17.17",
+    "@types/jest": "29.5.2",
+    "@types/node": "20.3.1",
+    "@types/supertest": "2.0.12",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "artillery": "^1.7.9",
+    "commitizen": "4.3.0",
+    "commitlint": "18.0.0",
     "conventional-github-releaser": "^1.1.7",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "pactum": "^3.5.1",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "jest": "29.5.0",
+    "pactum": "3.5.1",
+    "prettier": "3.0.0",
+    "source-map-support": "0.5.21",
+    "supertest": "6.3.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "9.4.3",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.1.3"
   },
   "config": {
     "commitizen": {
