--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,10 +1,8 @@
-version: '3'
+version: '3.7'
 services:
   basic-server-docker:
-    environment:
-      - NODE_ENV=development
-      - DATABASE_URL="12345"
-      - PORT=6060
+    env_file:
+      - .env
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,6 +10,29 @@ services:
       - ./:/usr/app
     container_name: basic-server
     expose:
-      - "6060"
+      - "6006"
     ports:
-      - "6060:6060"
+      - "6006:6006"
+  db:
+    image: "postgres"
+    ports:
+      - "5499:5432"
+    env_file:
+      - .env.postgres # configure postgres
+    volumes:
+      - basic-server-data:/var/lib/postgresql/data/ # persist data even if container shuts down
+    networks:
+      - basic-server
+  seq:
+    environment:
+      - ACCEPT_EULA=Y
+    volumes:
+      - seq:/data
+    ports:
+      - '8080:80' # exposes ui ports
+      - '5341:5341' # handles ingestion http end-point
+    image: 'datalust/seq:latest'
+volumes:
+  basic-server-data:
+networks:
+  basic-server:
