--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,5 @@
 version: '3.7'
 services:
-  basic-server-docker:
-    env_file:
-      - .env
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - ./:/usr/app
-    container_name: basic-server
-    expose:
-      - "6006"
-    ports:
-      - "6006:6006"
   db:
     image: "postgres"
     ports:
@@ -23,7 +10,17 @@ services:
       - basic-server-data:/var/lib/postgresql/data/ # persist data even if container shuts down
     networks:
       - basic-server
+  seq:
+    environment:
+      - ACCEPT_EULA=Y
+    volumes:
+      - seq:/data
+    ports:
+      - '8080:80' # exposes ui ports
+      - '5341:5341' # handles ingestion http end-point
+    image: 'datalust/seq:latest'
 volumes:
   basic-server-data:
+  seq:
 networks:
   basic-server:
