--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "joi": "17.11.0",
+    "nestjs-pino": "^3.5.0",
     "nestjs-real-ip": "3.0.1",
+    "pino-http": "^8.5.0",
+    "pino-seq": "^1.0.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "18.0.0",
