--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "test:load": "artillery run __tests__/load/basic-load-test.yml",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "prisma:update": "npm i --save-dev prisma@latest && npm i @prisma/client@latest",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@nestjs/common": "10.0.0",
+    "@nestjs/common": "10.2.7",
     "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.0.0",
-    "@nestjs/platform-express": "10.0.0",
+    "@nestjs/core": "10.2.7",
+    "@nestjs/platform-express": "10.2.7",
+    "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "joi": "17.11.0",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "18.0.0",
     "@cucumber/cucumber": "10.0.1",
+    "@faker-js/faker": "^8.2.0",
     "@nestjs/cli": "10.0.0",
     "@nestjs/schematics": "10.0.0",
     "@nestjs/testing": "10.0.0",
@@ -51,19 +55,21 @@
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
-    "artillery": "^1.7.9",
+    "artillery": "^2.0.0-38",
     "commitizen": "4.3.0",
     "commitlint": "18.0.0",
     "conventional-github-releaser": "^1.1.7",
     "eslint": "8.42.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
-    "jest": "29.5.0",
+    "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.5",
     "pactum": "3.5.1",
     "prettier": "3.0.0",
+    "prisma": "^5.4.2",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
-    "ts-jest": "29.1.0",
+    "ts-jest": "^29.1.0",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
@@ -73,5 +79,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "prisma": {
+    "schema": "./src/modules/db/prisma/schema.prisma"
   }
 }
