--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "10.2.7",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.7",
     "@nestjs/platform-express": "10.2.7",
+    "@nestjs/terminus": "^10.1.1",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
