--- a/package.json
+++ b/package.json
@@ -31,10 +31,15 @@
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.7",
     "@nestjs/platform-express": "10.2.7",
+    "@nestjs/swagger": "^7.1.13",
     "@nestjs/terminus": "^10.1.1",
+    "@nestjs/throttler": "^5.0.0",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
+    "helmet": "^7.0.0",
     "joi": "17.11.0",
     "nestjs-pino": "^3.5.0",
     "nestjs-real-ip": "3.0.1",
