--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -32,6 +32,7 @@ jobs:
     - run: npm run test:unit:coverage
 
   coverage:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
