--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -38,5 +38,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-          coverage-file: ./coverage/report.json
+          coverage-file: ./coverage/coverage-final.json
 
