--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,29 @@
 version: '3.7'
 services:
-  db:
-    image: "postgres"
-    ports:
-      - "5499:5432"
+  mysql-db:
+    image: mysql:8.0.33
+    restart: always
     env_file:
-      - .env.postgres # configure postgres
+      - .env.mysql
+    ports:
+      - '3307:3306'
+    expose:
+      - '3307'
     volumes:
-      - basic-server-data:/var/lib/postgresql/data/ # persist data even if container shuts down
+      - basic-server-db-data:/var/lib/mysql
     networks:
       - basic-server
+  seq:
+    environment:
+      - ACCEPT_EULA=Y
+    volumes:
+      - seq:/data
+    ports:
+      - '8080:80' # exposes ui ports
+      - '5341:5341' # handles ingestion http end-point
+    image: 'datalust/seq:latest'
 volumes:
-  basic-server-data:
+  basic-server-db-data:
+  seq:
 networks:
   basic-server:
