Add queues with Bull and BullBoard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,20 @@ services:
       - '8080:80' # exposes ui ports
       - '5341:5341' # handles ingestion http end-point
     image: 'datalust/seq:latest'
+  cache:
+    image: redis:7.2.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes:
+      - cache:/data
 volumes:
   basic-server-db-data:
   seq:
+  cache:
+    driver: local
 networks:
   basic-server:
+  cache:
+    driver: local
