--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -35,6 +35,14 @@ services:
     ports:
       - '8080:80' # exposes ui ports
       - '5341:5341' # handles ingestion http end-point
+  cache:
+    image: redis:7.2.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes:
+      - cache:/data
 volumes:
   basic-server-data:
 networks:
