--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@bull-board/api": "^5.9.1",
+    "@bull-board/express": "^5.9.1",
+    "@bull-board/nestjs": "^5.9.1",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "10.2.7",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.7",
@@ -37,6 +41,7 @@
     "@nestjs/throttler": "^5.0.0",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
+    "bull": "^4.11.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
