--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/common": "10.2.7",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.7",
+    "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/platform-express": "10.2.7",
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/terminus": "^10.1.1",
