--- a/package.json
+++ b/package.json
@@ -14,47 +14,46 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:cucumber": "cucumber-js",
     "test:unit": "jest --selectProjects unit",
     "test:unit:coverage": "jest --selectProjects unit --coverage",
+    "test:feature": "cucumber-js",
     "test:integration": "jest --selectProjects integration",
     "test:e2e": "jest --selectProjects e2e",
-    "test:load": "artillery run __tests__/load/basic-load-test.yml",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:load:local": "artillery run __tests__/load/local.basic-load-test.yml",
     "prisma:update": "npm i --save-dev prisma@latest && npm i @prisma/client@latest",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "full:test": "npm run test:unit:coverage && npm run test:integration && npm run test:e2e && npm run test:feature"
   },
   "dependencies": {
     "@bull-board/api": "^5.9.1",
     "@bull-board/express": "^5.9.1",
     "@bull-board/nestjs": "^5.9.1",
-    "@nestjs/axios": "^3.0.0",
+    "@nestjs/axios": "3.0.1",
     "@nestjs/bull": "^10.0.1",
-    "@nestjs/common": "10.2.7",
+    "@nestjs/common": "10.2.8",
     "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.7",
+    "@nestjs/core": "10.2.8",
     "@nestjs/event-emitter": "^2.0.2",
-    "@nestjs/platform-express": "10.2.7",
-    "@nestjs/swagger": "^7.1.13",
+    "@nestjs/platform-express": "10.2.8",
+    "@nestjs/swagger": "7.1.14",
     "@nestjs/terminus": "^10.1.1",
-    "@nestjs/throttler": "^5.0.0",
-    "@prisma/client": "^5.4.2",
-    "axios": "^1.5.1",
+    "@nestjs/throttler": "5.0.1",
+    "@prisma/client": "5.5.2",
+    "axios": "1.6.0",
     "bull": "^4.11.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
     "helmet": "^7.0.0",
     "joi": "17.11.0",
-    "nestjs-pino": "^3.5.0",
+    "nestjs-pino": "3.5.0",
     "nestjs-real-ip": "3.0.1",
-    "pino-http": "^8.5.0",
-    "pino-seq": "^1.0.0",
+    "pino-http": "8.5.1",
+    "pino-pretty": "10.2.3",
+    "pino-seq": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
-    "uuid": "^9.0.1"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "18.0.0",
@@ -69,10 +68,11 @@
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
-    "artillery": "^2.0.0-38",
+    "artillery": "^1.7.9",
     "commitizen": "4.3.0",
     "commitlint": "18.0.0",
     "conventional-github-releaser": "^1.1.7",
+    "cucumber-tsflow": "^4.2.1",
     "eslint": "8.42.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
