--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -10,9 +10,9 @@ services:
       - ./:/usr/app
     container_name: basic-server
     expose:
-      - "6006"
+      - "6008"
     ports:
-      - "6006:6006"
+      - "6008:6006"
   mysql-db:
     image: mysql:8.0.33
     restart: always
@@ -27,7 +27,6 @@ services:
     networks:
       - basic-server
   seq:
-    image: 'datalust/seq:latest'
     environment:
       - ACCEPT_EULA=Y
     volumes:
@@ -35,6 +34,7 @@ services:
     ports:
       - '8080:80' # exposes ui ports
       - '5341:5341' # handles ingestion http end-point
+    image: 'datalust/seq:latest'
   cache:
     image: redis:7.2.2-alpine
     restart: always
@@ -45,5 +45,12 @@ services:
       - cache:/data
 volumes:
   basic-server-data:
+  basic-server-db-data:
+  seq:
+  cache:
+    driver: local
 networks:
   basic-server:
+  cache:
+    driver: local
+
