--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:unit": "jest --selectProjects unit",
     "test:unit:coverage": "jest --selectProjects unit --coverage",
@@ -34,15 +35,19 @@
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.8",
     "@nestjs/event-emitter": "^2.0.2",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "10.2.8",
     "@nestjs/swagger": "7.1.14",
     "@nestjs/terminus": "^10.1.1",
     "@nestjs/throttler": "5.0.1",
-    "@prisma/client": "5.5.2",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^5.5.2",
+    "argon2": "^0.31.2",
     "axios": "1.6.0",
     "bull": "^4.11.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "helmet": "^7.0.0",
     "joi": "17.11.0",
@@ -80,7 +85,7 @@
     "jest-mock-extended": "^3.0.5",
     "pactum": "3.5.1",
     "prettier": "3.0.0",
-    "prisma": "^5.4.2",
+    "prisma": "^5.5.2",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
     "ts-jest": "^29.1.0",
