--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/core": "10.2.8",
     "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "10.2.8",
     "@nestjs/swagger": "7.1.14",
     "@nestjs/terminus": "^10.1.1",
@@ -53,6 +54,7 @@
     "joi": "17.11.0",
     "nestjs-pino": "3.5.0",
     "nestjs-real-ip": "3.0.1",
+    "passport-jwt": "^4.0.1",
     "pino-http": "8.5.1",
     "pino-pretty": "10.2.3",
     "pino-seq": "1.0.0",
