Adds verification via email

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
 TOKEN_ISSUER="ACME"
+
+JWT_SECRET=
+JWT_EXPIRES_IN=8h
+JWT_AUDIENCE=halthean-api
+JWT_ISSUER=https://api.halthean.co.uk/
