--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/throttler": "5.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.5.2",
+    "@sendgrid/mail": "^7.7.0",
     "argon2": "^0.31.2",
     "axios": "1.6.0",
     "bull": "^4.11.4",
@@ -54,6 +55,7 @@
     "joi": "17.11.0",
     "nestjs-pino": "3.5.0",
     "nestjs-real-ip": "3.0.1",
+    "nodemailer": "^6.9.7",
     "passport-jwt": "^4.0.1",
     "pino-http": "8.5.1",
     "pino-pretty": "10.2.3",
