--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@bull-board/api": "^5.9.1",
     "@bull-board/express": "^5.9.1",
     "@bull-board/nestjs": "^5.9.1",
-    "@nestjs/axios": "3.0.1",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "10.2.8",
     "@nestjs/config": "3.1.1",
@@ -44,22 +44,29 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.5.2",
     "@sendgrid/mail": "^7.7.0",
+    "@types/cookie-parser": "^1.4.6",
     "argon2": "^0.31.2",
-    "axios": "1.6.0",
+    "axios": "^1.6.0",
     "bull": "^4.11.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "ioredis": "^5.3.2",
     "joi": "17.11.0",
     "nestjs-pino": "3.5.0",
     "nestjs-real-ip": "3.0.1",
     "nodemailer": "^6.9.7",
+    "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.1",
     "pino-http": "8.5.1",
     "pino-pretty": "10.2.3",
     "pino-seq": "1.0.0",
+    "redis": "^4.6.11",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "uuid": "9.0.1"
